--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
 
     <!-- Bootstrap core CSS -->
     <link href="bootstrap.min.css" rel="stylesheet">
+    <link href="http://cdnjs.cloudflare.com/ajax/libs/animate.css/3.3.0/animate.min.css" rel="stylesheet">
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
+<script>
+ new WOW().init();
+</script>
+    <script src="main.js"></script>
 
     <!-- Custom styles for this template -->
     <link href="cover.css" rel="stylesheet">
@@ -34,20 +41,32 @@
               <nav>
                 <ul class="nav masthead-nav">
                   <li class="active"><a href="#">Home</a></li>
-                  <li><a href="#">Features</a></li>
+                  <li id ="feat" ><a href="#">Features</a></li>
                   <li><a href="#">Contact</a></li>
                 </ul>
               </nav>
             </div>
           </div>
 
-          <div class="inner cover">
-            <h1 class="cover-heading">WELCOME.</h1>
+          <div class="wow fadeInDown" class="inner cover">
+            <h1 id "home"  class="cover-heading">WELCOME.</h1>
             <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
             <p class="lead">
               <a href="#" class="btn btn-lg btn-default">Learn more</a>
             </p>
           </div>
+
+          <div class="wow fadeInDown"class="inner cover">
+            <h1 id="cont" class="cover-heading">FEAT</h1>
+            <p class="lead">edit the text, and add your own fullscreen background photo to make it your own edit the text, and add your own fullscreen background photo to make it your own.</p>
+            <p class="lead">
+              <a href="#" class="btn btn-lg btn-default">Learn more</a>
+            </p>
+          </div>
+
+          <div class="wow fadeOutDown">
+             Content to Reveal Here
+         </div>
 
           <div class="mastfoot">
             <div class="inner">
@@ -64,9 +83,6 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-    <script src="../../dist/js/bootstrap.min.js"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+    
   </body>
 </html>
