--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
               <h3 class="masthead-brand">Cover</h3>
               <nav>
                 <ul class="nav masthead-nav">
-                  <li class="active"><a href="#">Home</a></li>
+                  <li id ="navhome"class="active"><a href="#">Home</a></li>
                   <li id ="feat" ><a href="#">Features</a></li>
                   <li><a href="#">Contact</a></li>
                 </ul>
@@ -48,23 +48,23 @@
             </div>
           </div>
 
-          <div class="wow fadeInDown" class="inner cover">
-            <h1 id "home"  class="cover-heading">WELCOME.</h1>
+          <div id ="home" class="inner cover">
+            <h1   class="cover-heading">WELCOME2.</h1>
             <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
             <p class="lead">
               <a href="#" class="btn btn-lg btn-default">Learn more</a>
             </p>
           </div>
 
-          <div class="wow fadeInDown"class="inner cover">
-            <h1 id="cont" class="cover-heading">FEAT</h1>
+          <div id="cont" class="hide" class="show" class="inner cover">
+            <h1  class="cover-heading">FEAT</h1>
             <p class="lead">edit the text, and add your own fullscreen background photo to make it your own edit the text, and add your own fullscreen background photo to make it your own.</p>
             <p class="lead">
               <a href="#" class="btn btn-lg btn-default">Learn more</a>
             </p>
           </div>
 
-          <div class="wow fadeOutDown">
+          <div >
              Content to Reveal Here
          </div>
 
