--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
     <link href="http://cdnjs.cloudflare.com/ajax/libs/animate.css/3.3.0/animate.min.css" rel="stylesheet">
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
+<!-- 
 <script>
  new WOW().init();
 </script>
+Custom styles for this template -->
     <script src="main.js"></script>
 
     <!-- Custom styles for this template -->
