--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ Custom styles for this template -->
               <nav>
                 <ul class="nav masthead-nav">
                   <li id ="navhome"class="active"><a href="#">Home</a></li>
-                  <li id ="feat" ><a href="#">Features</a></li>
+                  <li id ="navcont" ><a href="#">Features</a></li>
                   <li><a href="#">Contact</a></li>
                 </ul>
               </nav>
