--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>GerardoLSJ and fullPage.js</title>
-	<meta name="author" content="Alvaro Trigo Lopez" />
 	<meta name="description" content="fullPage full-screen navigation and sections control menu." />
 	<meta name="keywords"  content="GerardoLSJ Gerardo Lopez Santibañez Jimenez fullpage" />
 	<meta name="Resource-type" content="Document" />
@@ -83,7 +82,7 @@
 			<div class="row-fluid ">
 				<h1 class="wow fadeInDown">Portafolio</h1>
 				<div class="col-xs-4 wow fadeInDown " data-wow-delay="0.2s">
-				  <img class="photo" src="imgs/my.png" alt="Generic placeholder image">
+				  <img class="photo" src="imgs/my.PNG" alt="Generic placeholder image">
 				  <h3>MyWay</h3>
 				  <p class="lead">A carpool aplication that let you save between 50% to 75% of you ride.  </p>
 				  <p class="lead">It was made at the MxHacksIII in Mexico City</p>
@@ -101,7 +100,7 @@
 				</div><!-- /.col-lg-4 -->
 				
 				<div class="col-xs-4 wow fadeInDown" data-wow-delay="0.6s">
-				  <img  class="photo" src="imgs/sigue.png" alt="Generic placeholder image">
+				  <img  class="photo" src="imgs/sigue.PNG" alt="Generic placeholder image">
 				   <h3>Sigue la Huella</h3>
 				 <p class="lead">A site where you can find you lost mascot and help others tu fond theirs. </p>
 				   <p class="lead">It was made at the Hackamano by SegundaMano FinTech Edition in Mexico City</p>
