--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 		<div class="intro">
 
 		 <h1 class="wow bounceInUp">Gerardo LSJ </h1>
-		 <p class="wow fadeInRight blanco" data-wow-delay="1.6s">Free Code Camp Ziplines</P>
+		 <p class="wow fadeInRight blanco" data-wow-delay="1.6s">Jr. Web developer</P>
 		 	<p></P>
 		 	 <div class="btn-group ">
          		<a href="http://fb.com/gerardolsj" class="btn btn-fb btn-lg wow fadeIn" data-wow-delay="0.5s"><i class="fa fa-facebook"></i> Facebook</a>
