--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 					<h1>Portafolio 	</h1>
 
 				<div class="col-xs-4 fadeInDown " data-wow-delay="0.6s">
-					<img class="photo" src="imgs/calcu.png" alt="Generic placeholder image">
+					<img class="photo" src="imgs/calcu.PNG" alt="Generic placeholder image">
 				  <h3>Calculator</h3>
 				  <p >Simple HTML5, CSS and JS responsive calculator</p>
 				  <a href="http://codepen.io/GerardoLSJ/full/Qyvzmj/" class="btn btn-default btn-lg wow fadeIn" data-wow-delay="1s"><i class="fa fa-paper-plane-o"></i> See More</a>
