--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<title>GerardoLSJ and fullPage.js</title>
+	<title>GerardoLSJ</title>
 	<meta name="description" content="fullPage full-screen navigation and sections control menu." />
 	<meta name="keywords"  content="GerardoLSJ Gerardo Lopez Santibañez Jimenez fullpage" />
 	<meta name="Resource-type" content="Document" />
