--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 				  <img  class="photo" src="imgs/dem.png" alt="Generic placeholder image">
 				   <h3>Wikipedia Viewer</h3>
 				   <p class="lead">Use the Wikipedia API to return the query</p>
-				    <a href="http://devpost.com/software/dem" class="btn btn-default btn-lg  fadeIn" data-wow-delay="2s"><i class="fa fa-paper-plane-o"></i> See More</a>
+				    <a href="http://codepen.io/GerardoLSJ/full/RRPYoL/" class="btn btn-default btn-lg  fadeIn" data-wow-delay="2s"><i class="fa fa-paper-plane-o"></i> See More</a>
 				   <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
 				</div><!-- /.col-lg-4 -->
 
