--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 	<meta name="description" content="fullPage full-screen navigation and sections control menu." />
 	<meta name="keywords"  content="GerardoLSJ Gerardo Lopez Santibañez Jimenez fullpage" />
 	<meta name="Resource-type" content="Document" />
-	<meta property="og:image" content="imgs/og.png">	
+	<meta property="og:image" content="imgs/og.png">
+	<link rel="icon" type="image/svg" href="imgs/fav.svg">	
 
 	<link rel="stylesheet" type="text/css" href="css/jquery.fullPage.css" />
 	<link rel="stylesheet" type="text/css" href="css/examples.css" />
