--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 		 <p class="wow fadeInRight blanco" data-wow-delay="0.5s">Jr. Web developer</P>
 		 	<p></P>
 		 	 <div class="btn-group ">
-         		<a href="http://fb.com/gerardolsj" class="btn btn-fb btn-lg wow fadeIn" data-wow-delay="0.9s"><i class="fa fa-facebook"></i> Facebook</a>
+         		<a href="https://www.linkedin.com/in/lsjgerardo" class="btn btn-ln btn-lg wow fadeIn" data-wow-delay="0.9s"><i class="fa fa-facebook"></i> LinkedIn</a>
           		 <a href="https://twitter.com/GerardoLSJ" class="btn btn-default btn-lg wow fadeIn" data-wow-delay="0.6s"><i class="fa fa-twitter"></i> Twitter</a>
         		 <a href="https://github.com/GerardoLSJ" class="btn btn-git btn-lg wow fadeIn" data-wow-delay="0.3s"><i class="fa fa-github"></i> GitHub</a>
        		 </div>
