--- a/test_yoga/index.html
+++ b/test_yoga/index.html
@@ -8,10 +8,11 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
-    <meta name="description" content="Flatfy Free Flat and Responsive HTML5 Template ">
+    <meta name="description" content="test">
     <meta name="author" content="">
+	<link rel="icon" type="image/png" href="img/icon/om.png">
 
-    <title>Flatfy – Free Flat and Responsive HTML5 Template</title>
+    <title>Yoga</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -47,13 +48,20 @@
 	<!-- FullScreen -->
     <div class="intro-header">
 		<div class="col-xs-12 text-center abcen1">
-			<h1 class="h1_home wow fadeIn" data-wow-delay="0.4s">Flatfy</h1>
-			<h3 class="h3_home wow fadeIn" data-wow-delay="0.6s">Clean & minimal Theme</h3>
+			<h1 class="h1_home wow fadeIn" data-wow-delay="0.4s">Yoga Irasema</h1>
+			<h3 class="h3_home wow fadeIn" data-wow-delay="0.6s">Centro de Bienestar Integral</h3>
+			
+			<div class="wow fadeIn" data-wow-delay="1.5s">
+				<h3 class="h3_home" >Irasema Carranza </h3>
+				<p class="lead" >Certificado Nacional e Internacional 15 años de experiencia.</p>
+				<img src="img/irasema.jpg" alt="" class="img-circle wow fadeIn" >
+			</div>
+
 			<ul class="list-inline intro-social-buttons">
-				<li><a href="https://twitter.com/galantiandrea" class="btn  btn-lg mybutton_cyano wow fadeIn" data-wow-delay="0.8s"><span class="network-name">Twitter</span></a>
+				<li><a href="https://www.facebook.com/groups/395372840581460/?fref=ts" class="btn  btn-lg mybutton_cyano wow fadeIn" data-wow-delay="2.5s"><span class="network-name">Facebook</span></a>
 				</li>
-				<li id="download" ><a href="#downloadlink" class="btn  btn-lg mybutton_standard wow swing wow fadeIn" data-wow-delay="1.2s"><span class="network-name">Free Download</span></a>
-				</li>
+				
+			
 			</ul>
 		</div>    
         <!-- /.container -->
@@ -74,7 +82,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="#home">Flatfy</a>
+				<a class="navbar-brand" href="#home">Yoga Irasema</a>
 			</div>
 
 			<div class="collapse navbar-collapse navbar-right navbar-ex1-collapse">
