--- a/index.html
+++ b/index.html
@@ -64,7 +64,11 @@
 		<div class="intro">
 
 		 <h1 class="wow bounceInUp">Gerardo LSJ </h1>
-		 <p class="wow fadeInRight blanco" data-wow-delay="0.5s">Jr. Web developer</P>
+		 <p style="      text-shadow:
+   -0.5px -0.5px 0 #000,  
+    0.5px -0.5px 0 #000,
+    -0.5px 0.5px 0 #000,
+     0.5px 0.5px 0 #000;"class="blanco" >Web developer, Angular 1 & 2, Phonegap/Cordova, VanillaJS, Python/Django</P>
 		 	<p></P>
 		 	 <div class="btn-group ">
          		<a href="https://www.linkedin.com/in/lsjgerardo" class="btn btn-ln btn-lg wow fadeIn" data-wow-delay="0.9s"><i class="fa fa-linkedin"></i> LinkedIn</a>
