--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 	<meta name="Resource-type" content="Document" />
 	<meta property="og:image" content="imgs/og.png">
 	<link rel="icon" type="image/svg" href="imgs/fav.svg">	
-
+<!--
 	<link rel="stylesheet" type="text/css" href="css/jquery.fullPage.css" />
 	<link rel="stylesheet" type="text/css" href="css/examples.css" />
 	<link rel="stylesheet" type="text/css" href="css/animate.css" />
-
-
+-->
+	<link rel="stylesheet" type="text/css" href="output.css" />
 	
  	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
  	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
@@ -32,11 +32,14 @@
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 	<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
 
+	<script type="text/javascript" src="build.js"></script>
+
+<!--
 	<script type="text/javascript" src="js/jquery.slimscroll.min.js"></script>
 
 	<script type="text/javascript" src="js/jquery.fullPage.js"></script>
 	<script type="text/javascript" src="js/examples.js"></script>
-
+-->
 	<script type="text/javascript">
 		$(document).ready(function() {
 			$('#fullpage').fullpage({
@@ -60,7 +63,7 @@
 
 
 <div id="fullpage">
-	<div class="section " id="section0">
+	<div class="section fp-auto-height-responsive" id="section0">
 		<div class="intro">
 
 		 <h1 class="wow bounceInUp">Gerardo LSJ </h1>
