--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 	<link rel="stylesheet" type="text/css" href="css/jquery.fullPage.css" />
 	<link rel="stylesheet" type="text/css" href="css/examples.css" />
 	<link rel="stylesheet" type="text/css" href="css/animate.css" />
--->
-	<link rel="stylesheet" type="text/css" href="output.css" />
-	
- 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
  	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+-->
+	<link rel="stylesheet" type="text/css" href="build/output.css" />
+	
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
  	<link href='https://fonts.googleapis.com/css?family=Raleway:400,300' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" type="text/css" href="build/custom.min.css" />
 
- 	<link rel="stylesheet" type="text/css" href="css/custom.css" />
 	
 
 	<!--[if IE]>
@@ -29,10 +29,9 @@
 		</script>
 	<![endif]-->
 
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-	<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
 
-	<script type="text/javascript" src="build.js"></script>
+	<script type="text/javascript" src="build/customjquery.js"></script>
+	<script type="text/javascript" src="build/build.js"></script>
 
 <!--
 	<script type="text/javascript" src="js/jquery.slimscroll.min.js"></script>
